<resources>
    <string name="app_name">phys8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="til_email">Masukkan alamat email</string>
    <string name="til_password">Masukkan kata sandi</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="btn_login_txt">Masuk</string>
    <string name="txt_log_to_reg1">Belum punya akun?</string>
    <string name="txt_log_to_reg2">Daftar disini</string>
    <string name="copyright">Copyright@Phys2021</string>
    <string name="name">Nama</string>
    <string name="password_confirmation">Konfirmasi Kata Sandi</string>
    <string name="Daftar">Daftar</string>
    <string name="txt_reg_to_log1">Sudah punya akun?</string>
    <string name="txt_reg_to_log2">Masuk disini</string>
    <string name="til_name">Masukkan nama</string>
    <string name="til_password_confirmation">Masukkan ulang kata sandi</string>
    <string name="Play">Play</string>
    <string name="cashAmount">9999</string>
    <string name="Pengaturan">Pengaturan</string>
    <string name="namaUser">namaUser</string>
    <string name="title_history">Histori Bermain</string>
    <string name="waktu">Waktu</string>
    <string name="date">31/12/9999</string>
    <string name="level">99</string>
    <string name="amount_answers">10/10</string>
    <string name="Waktu">Waktu</string>
    <string name="Level">Level</string>
    <string name="Benar">Benar</string>
    <string name="JangkaWaktu">Jangka Waktu</string>
    <string name="Peringkat">Peringkat</string>
    <string name="rank">1</string>
    <string name="rank2">10</string>
    <string name="coin_amount" />
    <string name="maxCoin">9999</string>
</resources>