<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund_history_gradient">

    <TextView
        android:id="@+id/txt_history_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_history_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/level"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txt_history_date"
        app:layout_constraintTop_toTopOf="@+id/txt_history_date" />

    <TextView
        android:id="@+id/txt_history_correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/amount_answers"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txt_history_level"
        app:layout_constraintTop_toTopOf="@+id/txt_history_level" />

    <TextView
        android:id="@+id/txt_history_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="49dp"
        android:fontFamily="@font/montserrat"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_history_correct_answers"
        app:layout_constraintTop_toTopOf="@+id/txt_history_correct_answers" />

</androidx.constraintlayout.widget.ConstraintLayout>