<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund_history_gradient"
    android:elevation="8dp"
    tools:context=".Views.Fragments.HistoryFragment">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/rammetto_one"
        android:text="@string/title_history"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/history_cardview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/ic_rectangle_5"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="60dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_history_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <ScrollView
            android:id="@+id/history_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_rectangle_5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/history_card_constraint"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/Level"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/montserrat"
                    android:text="Skor"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/textView24"
                    app:layout_constraintTop_toTopOf="@+id/textView24" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/Benar"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/textView22"
                    app:layout_constraintTop_toTopOf="@+id/textView22" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:background="@color/white"
                    android:elevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView24" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btn_history_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:src="@drawable/btn_profile_kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>